# rpi-devenv

./: .env  .gitignore  Cargo.toml  Justfile  README.md  arm-none-eabihf.json  armv6a-none-eabihf.json  config.txt  kernel.img  link.x  rust.list
.cargo/: config.toml
bootcom/: Cargo.toml
bootcom/src/: main.rs
bootloader/: Cargo.toml  link.x
bootloader/.cargo/: config.toml
bootloader/src/: boot.s  main.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: boot.s  main.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: ui.rs
macros/tests/ui/: async.rs  async.stderr  attr_arguments.rs  attr_arguments.stderr  correct.rs  fn_arguments.rs  fn_arguments.stderr  generics.rs  generics.stderr  no_return.rs  no_return.stderr  not_function.rs  not_function.stderr  wrong_return.rs  wrong_return.stderr
src/: aux.rs  boot.s  critical_section.rs  executor.rs  gpio.rs  interrupt.rs  lib.rs  main.rs  mmu.rs  sync.rs  uart.rs
src/aux/: spi.rs  uart.rs
src/aux/spi/: implementation.rs  mode.rs  registers.rs
src/aux/uart/: reader.rs  registers.rs  writer.rs
src/gpio/: state.rs
src/system_time/: driver.rs
