[workspace]
members = ["bootloader", "bootcom", "kernel"]

[workspace.dependencies]
rpi = { path = "." }

[package]
name = "rpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
bench = false

[dependencies]
bitflags = "2.5"

# Optimize for size
# [profile.release]
# lto = true
# codegen-units = 1
# opt-level = "z"
