[workspace]
members = ["bootloader", "bootcom", "kernel"]

[workspace.dependencies]
rpi = { path = "." }

[package]
name = "rpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
bench = false

[dependencies]
embassy-executor = "0.6.1"
embassy-time-driver = { version = "0.1.0", features = ["tick-hz-1_000_000"] }
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }


# Optimize for size
# [profile.release]
# lto = true
# codegen-units = 1
# opt-level = "z"
